修复已知问题