@@ -3,8 +3,16 @@ package com.kbd.pms.service;
 import com.kbd.pms.dto.NotificationDto;
 import com.kbd.pms.entity.IamUserEntity;
 import com.kbd.pms.entity.NotificationEntity;
+import com.kbd.pms.entity.OrgDepartmentEntity;
+import com.kbd.pms.entity.Role;
+import com.kbd.pms.entity.User;
 import com.kbd.pms.repository.IamUserRepository;
 import com.kbd.pms.repository.NotificationRepository;
+import com.kbd.pms.repository.OrgDepartmentRepository;
+import com.kbd.pms.repository.UserRepository;
+import com.kbd.pms.workflow.WfProcessDefinition;
+import com.kbd.pms.workflow.WfProcessNode;
+import com.kbd.pms.workflow.WfProcessRepository;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.data.domain.Page;
@@ -13,7 +21,10 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.Instant;
+import java.util.HashSet;
+import java.util.Locale;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
@@ -25,16 +36,25 @@ public class NotificationService {
   private final IamUserRepository iamUserRepository;
   private final SecurityHelper securityHelper;
   private final EmailService emailService;
+  private final UserRepository userRepository;
+  private final OrgDepartmentRepository orgDepartmentRepository;
+  private final WfProcessRepository wfProcessRepository;
 
   public NotificationService(
       NotificationRepository notificationRepository,
       IamUserRepository iamUserRepository,
       SecurityHelper securityHelper,
-      EmailService emailService) {
+      EmailService emailService,
+      UserRepository userRepository,
+      OrgDepartmentRepository orgDepartmentRepository,
+      WfProcessRepository wfProcessRepository) {
     this.notificationRepository = notificationRepository;
     this.iamUserRepository = iamUserRepository;
     this.securityHelper = securityHelper;
     this.emailService = emailService;
+    this.userRepository = userRepository;
+    this.orgDepartmentRepository = orgDepartmentRepository;
+    this.wfProcessRepository = wfProcessRepository;
   }
 
   // ==================== 发送通知 ====================
@@ -95,14 +115,44 @@ public class NotificationService {
 
   /**
    * 发送通知给同一部门的多个执行人（可指定是否同时作为待办）
+   * 排除该部门的负责人（部门负责人负责审批而非上传交付物），但不影响其他部门
    */
   @Transactional
   public void sendNotificationToDeptExecutors(Long deptId, String type, String title,
                                               String content, Long projectId,
                                               String milestoneCode, Long excludeUserId,
                                               boolean isTodo) {
-    List<IamUserEntity> users = iamUserRepository.findByDeptIdAndIsActiveTrue(deptId);
-    for (IamUserEntity user : users) {
+    // 查找该部门的负责人ID，仅排除本部门负责人（而非全局ROLE_DEPT_HEAD）
+    Long headUserId = orgDepartmentRepository.findById(deptId)
+        .map(OrgDepartmentEntity::getHeadUserId)
+        .orElse(null);
+
+    List<User> users = userRepository.findByDepartmentId(deptId);
+    for (User user : users) {
+      if (!Boolean.TRUE.equals(user.getIsActive())) {
+        continue;
+      }
+      boolean isDeptExecutor = user.getRoles() != null
+          && user.getRoles().stream().map(Role::getName).anyMatch("ROLE_DEPT_EXECUTOR"::equals);
+      if (!isDeptExecutor) {
+        continue;
+      }
+      // 跳过部门负责人角色（负责审批，不负责上传交付物）
+      boolean isDeptHead = user.getRoles() != null
+          && user.getRoles().stream().map(Role::getName).anyMatch("ROLE_DEPT_HEAD"::equals);
+      if (isDeptHead) {
+        continue;
+      }
+      // 跳过 PM 角色（PM 负责审批，不负责上传交付物）
+      boolean isPm = user.getRoles() != null
+          && user.getRoles().stream().map(Role::getName).anyMatch("ROLE_PM"::equals);
+      if (isPm) {
+        continue;
+      }
+      // 跳过该部门的负责人（他们负责审批而非上传）
+      if (headUserId != null && user.getId().equals(headUserId)) {
+        continue;
+      }
       if (excludeUserId != null && user.getId().equals(excludeUserId)) {
         continue;
       }
@@ -158,16 +208,39 @@ public class NotificationService {
   }
 
   /**
-   * 获取当前用户待办通知
+   * 获取当前用户待办通知（同时自动清理不应存在的错误待办）
    */
-  @Transactional(readOnly = true)
+  @Transactional
   public List<NotificationDto> getPendingTodos() {
     Long userId = securityHelper.getCurrentUserId();
-    return notificationRepository
-        .findByRecipientUserIdAndIsTodoTrueAndIsDoneFalseOrderByCreatedAtDesc(userId)
-        .stream()
-        .map(this::toDto)
-        .collect(Collectors.toList());
+    User currentUser = userRepository.findById(userId).orElse(null);
+    List<String> roles = currentUser == null || currentUser.getRoles() == null
+        ? List.of()
+        : currentUser.getRoles().stream().map(Role::getName).toList();
+    Set<Long> userDeptIds = currentUser == null || currentUser.getDepartments() == null
+        ? Set.of()
+        : currentUser.getDepartments().stream()
+            .map(OrgDepartmentEntity::getId)
+            .filter(java.util.Objects::nonNull)
+            .collect(Collectors.toSet());
+    boolean isDepartmentHead = roles.contains("ROLE_DEPT_HEAD") || isDepartmentHeadByAssignment(userId);
+
+    List<NotificationEntity> allPending = notificationRepository
+        .findByRecipientUserIdAndIsTodoTrueAndIsDoneFalseOrderByCreatedAtDesc(userId);
+
+    List<NotificationDto> visible = new java.util.ArrayList<>();
+    for (NotificationEntity entity : allPending) {
+      if (isTodoVisibleForRoles(entity, roles, userDeptIds, isDepartmentHead)) {
+        visible.add(toDto(entity));
+      } else {
+        // 自动清理不应存在的待办（角色变更或规则更新后自动消除）
+        entity.setIsDone(true);
+        notificationRepository.save(entity);
+        log.info("自动清理无效待办: id={}, type={}, recipientUserId={}, roles={}, deptIds={}, isDepartmentHead={}",
+            entity.getId(), entity.getType(), entity.getRecipientUserId(), roles, userDeptIds, isDepartmentHead);
+      }
+    }
+    return visible;
   }
 
   // ==================== 标记已读 ====================
@@ -222,6 +295,74 @@ public class NotificationService {
         entity.getIsDone(),
         entity.getCreatedAt()
     );
+  }
+
+  private boolean isTodoVisibleForRoles(NotificationEntity entity, List<String> roles,
+                                        Set<Long> userDeptIds, boolean isDepartmentHead) {
+    if (entity == null || entity.getType() == null) {
+      return true;
+    }
+    String normalizedType = entity.getType().trim().toUpperCase(Locale.ROOT);
+    boolean isPm = roles.contains("ROLE_PM");
+    boolean isDeptExecutor = roles.contains("ROLE_DEPT_EXECUTOR");
+    return switch (normalizedType) {
+      // 完善项目信息是 PM 的职责，部门负责人不应看到此待办
+      case "PROJECT_COMPLETION" -> isPm && !isDepartmentHead;
+      // 上传交付物的可见性需要与流程管理页中配置的上传部门一致
+      case "DELIVERABLE" -> isDeliverableTodoVisible(entity, isDeptExecutor, isPm, isDepartmentHead, userDeptIds);
+      // REVIEW_APPROVAL 属于评审批办体系，不应再作为通知待办返回；由 ReviewService 统一提供
+      case "REVIEW_APPROVAL" -> false;
+      default -> true;
+    };
+  }
+
+  private boolean isDeliverableTodoVisible(NotificationEntity entity, boolean isDeptExecutor,
+                                           boolean isPm, boolean isDepartmentHead,
+                                           Set<Long> userDeptIds) {
+    if (!isDeptExecutor || isPm || isDepartmentHead) {
+      return false;
+    }
+    if (entity.getMilestoneCode() == null || entity.getProjectId() == null) {
+      return true;
+    }
+    Set<Long> uploaderDeptIds = resolveUploaderDeptIds(entity.getMilestoneCode());
+    if (uploaderDeptIds.isEmpty()) {
+      log.warn("DELIVERABLE待办未匹配到流程上传部门，暂保留待办: notificationId={}, projectId={}, milestoneCode={}",
+          entity.getId(), entity.getProjectId(), entity.getMilestoneCode());
+      return true;
+    }
+    return userDeptIds.stream().anyMatch(uploaderDeptIds::contains);
+  }
+
+  private Set<Long> resolveUploaderDeptIds(String milestoneCode) {
+    if (milestoneCode == null || milestoneCode.isBlank()) {
+      return Set.of();
+    }
+    WfProcessDefinition def = wfProcessRepository
+        .findByProcessTypeAndMilestoneCodeAndIsActiveTrue("MILESTONE", milestoneCode)
+        .orElse(null);
+    if (def == null || def.getNodes() == null) {
+      return Set.of();
+    }
+    Set<Long> deptIds = new HashSet<>();
+    for (WfProcessNode node : def.getNodes()) {
+      if (!Boolean.TRUE.equals(node.getIsUploader()) || node.getApproverValue() == null) {
+        continue;
+      }
+      for (String deptIdStr : node.getApproverValue().split(",")) {
+        try {
+          deptIds.add(Long.parseLong(deptIdStr.trim()));
+        } catch (NumberFormatException e) {
+          log.warn("流程上传节点存在无效部门ID: milestoneCode={}, nodeCode={}, approverValue={}",
+              milestoneCode, node.getNodeCode(), node.getApproverValue());
+        }
+      }
+    }
+    return deptIds;
+  }
+
+  private boolean isDepartmentHeadByAssignment(Long userId) {
+    return userId != null && !orgDepartmentRepository.findByHeadUserId(userId).isEmpty();
   }
 
   /**
